--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -706,12 +706,11 @@
 
 
 
-.opportunity-description {
+.oppo-description {
   text-align: center;
-  font-size: 1.3em;
+  font-size: 1.3rem;
   padding-top: 2vh;
   padding-bottom: 2vh;
-  border-top: 1px solid $lightgrey;
   padding-left: 4vw;
   padding-right: 4vw;
 
@@ -719,6 +718,7 @@
     margin-left: 2vw;
     margin-right: 2vw;
     padding-bottom: 2vh;
+    font-size: 1rem;
   }
 }
 
