it technically works now but what the FUCK

--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import 'theme.scss';
 @import 'grid.scss';
+@import 'mixins.scss';
 
 
 .opportunity-show-page {
