--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -1,13 +1,14 @@
 //= require introjs
 //= require simple_calendar
 
-@import "/*";
+
 @import "bootstrap";
 @import "tether";
-@import "font-awesome";
+@import "font-awesome.css";
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 $enable-responsive-font-sizes: true;
-
+@import 'mixins.scss';
+@import 'theme.scss';
 
 
 html, body {
