some tweaks to the home page and to oppo#show page, cleanup has begun

--- a/app/assets/javascripts/notifications.js.erb
+++ b/app/assets/javascripts/notifications.js.erb
@@ -40,9 +40,9 @@ function addClassName(aTag) {
 	return "<li>" + aTag + "</li>";
 }
 
-function markAsRead(noNotifications) {
-	$.ajax({
-		url: 'notifications/mark_as_read?authenticity_token=' + gon.auth_token,
-		method: 'GET'
-	})
-}
+// function markAsRead(noNotifications) {
+// 	$.ajax({
+// 		url: 'notifications/mark_as_read?authenticity_token=' + gon.auth_token,
+// 		method: 'GET'
+// 	})
+// }
