points are adding to and reading from dynamo successfully

--- a/app/views/leaderboard/show.html.erb
+++ b/app/views/leaderboard/show.html.erb
@@ -1,2 +1,6 @@
 <h1>Leaderboard#show</h1>
 <p>Find me in app/views/leaderboard/show.html.erb</p>
+
+User points:<%= @user_points %>
+Region points: <%= @region_points %>
+Country points: <%= @country_points %>
