ready to put a calendar in this bitch

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -1,7 +1,7 @@
 //= require introjs
 //= require simple_calendar
 //= require_tree .
-
+//= require fullcalendar
 
 @import "bootstrap";
 @import "tether";
