--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Just Be Human</title>
+    <title>Detrashers - The cleanup community</title>
+    <meta name="description" content="Detrashers is the community for people who want to participate in or organize trash cleanups. Manage waivers, RSVP's, responsibilities and more, all in one place.">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= include_gon %>
