scaffolded structure is almost finished

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -8,7 +8,7 @@
     <textarea class="post-content-textarea" placeholder="Write your post here" name="post[content]" id="post_content"></textarea>
   </div>
   <div class="post-attachments-container">
-    <%= f.file_field :images, multiple: true %>
+    <%= f.file_field :images, multiple: true, direct_upload: true %>
   </div>
   <% if params[:opportunity] %>
     <%= f.hidden_field :opportunity_id, :value => params[:opportunity][:id] %>
