I want this in prod now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Just Be Human</title>
+    <title>Detrashers - The Cleanup Community</title>
+    <meta name="description" content="Detrashers.org is a community for people who want to help make their world a cleaner place.">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= include_gon %>
