--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -1,8 +1,19 @@
-<% if @geopoint %>
-  <div id="calendar"></div>
-<% else %>
-  <form class="form-inline my-2 my-lg-0" accept-charset="UTF-8" action="/" method="get">
-    <input class="form-control mr-sm-2" type="search" id="postcode" placeholder="Enter a postal code" aria-label="Change Location" name="postcode">
-    <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" href="/" value="postcode">Change Location</button>
-  </form>
-<% end %>
+<head>
+    <style>
+        .calendar-background {
+            background: url(<%= asset_path 'calendar-background.jpg' %>);
+            background-size: cover;
+            }
+    </style>
+</head>
+<div class="calendar-background">
+  <% if @geopoint %>
+    <div id="calendar"></div>
+    <%= @json %>
+  <% else %>
+    <form class="form-inline my-2 my-lg-0" accept-charset="UTF-8" action="/" method="get">
+      <input class="form-control mr-sm-2" type="search" id="postcode" placeholder="Enter a postal code" aria-label="Change Location" name="postcode">
+      <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" href="/" value="postcode">Change Location</button>
+    </form>
+  <% end %>
+</div>
