--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,8 +7,8 @@
       <!-- Grid column -->
       <div class="col-md-8 mt-md-0 mt-3">
         <!-- Content -->
-        <h5 class="text-uppercase">Just Be Human <small>BETA</small></h5>
-        <p>Just Be Human is run by a 501(c)3 non-profit and is principally donation-funded. We do not run advertisements, nor do we collect information for commercial purposes.</p>
+        <h5 class="text-uppercase">Detrashers <small>BETA</small></h5>
+        <p>Detrashers is run by a 501(c)3 non-profit and is donation-funded. We will never collect information for commercial purposes.</p>
       </div>
       <!-- Grid column -->
       <hr class="clearfix w-100 d-md-none pb-3">
@@ -31,7 +31,7 @@
   </div>
   <!-- Footer Links -->
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© <%= Date.today.strftime('%Y') %> - Just Being Human v1.5.0-beta</div>
+  <div class="footer-copyright text-center py-3">© <%= Date.today.strftime('%Y') %> - Detrashers v1.1.0-beta</div>
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
