--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -1,18 +1,21 @@
 //= require introjs
 //= require simple_calendar
 //= require_tree .
-//= require fullcalendar
 
 @import "bootstrap";
 @import "tether";
-
 @import 'font-awesome.css';
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 $enable-responsive-font-sizes: true;
 @import "mixins.scss";
 @import 'theme.scss';
 
-
+@font-face {
+  font-family: 'TwinMarker';
+  src: font-url('TwinMarker.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 html, body {
   font-family: 'Montserrat', sans-serif !important;
