--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -12,6 +12,10 @@ $limegreen: #99cc66;
 $limegreen-low: rgba(153,204,102,.3);
 $limegreen-mid: rgba(153,204,102,.6);
 
+$darkgreen: #004d00;
+$darkgreen-low: rgba(0,77,0,.3);
+$darkgreen-mid: rgba(0,77,0,.6);
+
 
 $lightpink: #E9B1E0;
 $lightpink-low: rgba(233,177,224,.3);
