--- a/app/views/opportunities/_editform.html.erb
+++ b/app/views/opportunities/_editform.html.erb
@@ -13,7 +13,7 @@
       <div class="defined-options-container" id="defined-options">
         <h5 class="defined-options-subheader">When is it and how many people do you need?</h5>
         <div class="completion-date-selection">
-          <%= f.input :target_completion_date, order: [:month, :day, :year, :hour, :minute] %>
+          <%= f.input :cleanup_date, order: [:month, :day, :year, :hour, :minute] %>
         </div>
         <div class="volunteers-required-input">
           <%= f.input :volunteers_required %>
