--- a/app/views/opportunities/_requirement_row.html.erb
+++ b/app/views/opportunities/_requirement_row.html.erb
@@ -4,7 +4,7 @@
     <div class="jbh-grid-container">
       <div class="jbh-grid-first">
         <div class="requirement-row-excerpt"><%= requirement.display_description %></div>
-        <div class="requirement-row-date req-row-info"><strong>Due date: </strong><%= requirement.target_completion_date %></div>
+        <div class="requirement-row-date req-row-info"><strong>Due date: </strong><%= requirement.cleanup_date %></div>
         <div class="requirement-row-author req-row-info"><strong>Priority: </strong><%= requirement.priority %></div>
       </div>
       <div class="jbh-grid-second">
