--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -1,19 +1,24 @@
-<head>
-    <style>
-        .calendar-background {
-            background: url(<%= asset_path 'calendar-background.jpg' %>);
-            background-size: cover;
-            }
-    </style>
-</head>
+
 <div class="calendar-background">
   <% if @geopoint %>
-    <div id="calendar"></div>
-    <%= @json %>
+    <div id="calendar">
+      <%= week_calendar start_date_param: :offset_start do |date| %>
+        <%= date %>
+      <% end %>
+    </div>
+    <%= @opportunities %>
   <% else %>
-    <form class="form-inline my-2 my-lg-0" accept-charset="UTF-8" action="/" method="get">
-      <input class="form-control mr-sm-2" type="search" id="postcode" placeholder="Enter a postal code" aria-label="Change Location" name="postcode">
-      <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" href="/" value="postcode">Change Location</button>
-    </form>
+    <div class="location-select-div">
+      <div class="location-select-outline">
+        <div class="location-select-title">
+          Welcome to Detrashers.org!
+        </div>
+        <form class="form-inline my-2 my-lg-0" accept-charset="UTF-8" action="/" method="get">
+          <input class="form-control location-select-field" type="search" id="postcode" placeholder="Enter postal code here" aria-label="Change Location" name="postcode">
+          <br>
+          <button class="location-select-btn" type="submit" href="/" value="postcode">Get Started</button>
+        </form>
+      </div>
+    </div>
   <% end %>
 </div>
