--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-light navbar-expand-lg">
   <a class="navbar-brand" href="/">
-    <%= image_tag("beta-logo.png", class: "navbar-logo", id: "home-step1") %>
+    <%= image_tag("detrashers-logo.png", class: "navbar-logo", id: "home-step1") %>
+    <span class="navbar-title">
+      DETRASHERS
+    </span>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation">
     <div class="animated-icon2"><span class="navbar-toggler-icon"></span></div>
