--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -39,11 +39,17 @@
 
 .navbar-logo {
   width: auto;
-  max-width: 22vw;
+  max-width: 4vw;
 
   @include respond-to(handhelds) {
-    max-width: 65vw;
+    max-width: 150px;
   };
+}
+
+.navbar-title {
+  font-family: 'TwinMarker';
+  font-size: 4rem;
+  color: $darkgreen;
 }
 
 .nav-item {
