--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -15,6 +15,7 @@ $limegreen-mid: rgba(153,204,102,.6);
 $darkgreen: #004d00;
 $darkgreen-low: rgba(0,77,0,.3);
 $darkgreen-mid: rgba(0,77,0,.6);
+$darkgreen-hvy: rgba(0,77,0,.8);
 
 
 $lightpink: #E9B1E0;
