--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
       <div class="col-md-8 mt-md-0 mt-3">
         <!-- Content -->
         <h5 class="text-uppercase">Detrashers <small>BETA</small></h5>
-        <p>Detrashers is run by a 501(c)3 non-profit and is donation-funded. We will never collect information for commercial purposes.</p>
+        <p>Detrashers is run by a 501(c)3 non-profit and is donation-funded. We do not collect information for commercial purposes.</p>
       </div>
       <!-- Grid column -->
       <hr class="clearfix w-100 d-md-none pb-3">
