--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -2,11 +2,28 @@
 <div class="calendar-background">
   <% if @geopoint %>
     <div id="calendar">
-      <%= week_calendar start_date_param: :offset_start do |date| %>
-        <%= date %>
+      <%= week_calendar events: @opportunities do |date| %>
+        <% @opportunities.each do |opp| %>
+          <% if date.to_date == Date.today %>
+            <div class="today-marker">
+              Today
+            </div>
+          <% end %>
+          <% if opp.cleanup_date == date.to_date %>
+            <div class="calendar-opportunity">
+              <a href="/opportunities/<%= opp.id %>">
+                <div class="calendar-opportunity-title">
+                  <%= opp.title %>
+                </div>
+                <div class="calendar-opportunity-time">
+                  <%= opp.start_time.strftime('%H:%M %p') + ' - ' + opp.end_time.strftime('%H:%M %p') %>
+                </div>
+              </a>
+            </div>
+          <% end %>
+        <% end %>
       <% end %>
     </div>
-    <%= @opportunities %>
   <% else %>
     <div class="location-select-div">
       <div class="location-select-outline">
