--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -27,7 +27,7 @@
 .navbar-brand {
   font-size: 2.2em;
   margin-right: auto;
-
+  display: flex !important;
 }
 
 .desktop-nav {
@@ -40,11 +40,13 @@
 .navbar-logo {
   width: auto;
   max-width: 4vw;
-
+  height: auto;
   @include respond-to(handhelds) {
     max-width: 150px;
   };
 }
+
+
 
 .navbar-title {
   font-family: 'TwinMarker';
