steaming right along

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -9,6 +9,7 @@
 $enable-responsive-font-sizes: true;
 @import "mixins.scss";
 @import 'theme.scss';
+@import "rails_bootstrap_forms";
 
 @font-face {
   font-family: 'TwinMarker';
