--- a/app/views/opportunities/new.html.erb
+++ b/app/views/opportunities/new.html.erb
@@ -1,2 +1,3 @@
-<div class="jbh-standard-title">Create a new volunteer opportunity</div>
-<%= render 'creationform', opportunity: @opportunity %>
+<div class="new-cleanup-page">
+  <%= render 'creationform', opportunity: @opportunity %>
+</div>
