--- a/app/views/pages/map.html.erb
+++ b/app/views/pages/map.html.erb
@@ -1,46 +1,26 @@
 <div class="home-page">
   <div class="d-flex flex-column align-items-center justify-content-center current-zip floater">
-    <h3><span class="zip-floater">Active Zip: </span><%= @geopoint.zip %></h3>
-  </div>
-  <div class="d-flex flex-column filter floater" data-open="false" onclick="toggleFilter(event)" >
-    <h3>Filters</h3>
-    <div class="filter-container">
-      <div class="form-group">
-        <label for="opportunity_titles">Search Titles</label>
-        <input type="text" class="form-control" id="opportunity_titles" oninput="handleTextInput(event)" aria-describedby="opportunity_titles" placeholder="Search by title">
-      </div>
-      <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="opportunity_volunteers" onchange="handleCheckbox(event)" aria-describedby="opportunity_volunteers">
-        <label for="opportunity_volunteers">Needs Volunteers</label>
-      </div>
-    </div>
+    <h3>
+      <span class="zip-floater">Zip: </span><%= @geopoint.zip %>
+    </h3>
+    <h3>
+      <span class="date-floater">Date: </span><%= @cleanup_date.strftime("%m-%d-%Y") %>
+    </h3>
   </div>
   <aside class="home-page-aside">
-    <div class="homepage-header" id="home-step4">
-      <div class="tab hp">
-        <button class="tablinks hp" onclick="openTab(event, 'opps-near-me')" id="defaultOpen">Open</button>
-        <button class="tablinks hp" onclick="openTab(event, 'my-opps')">Participating</button>
-      </div>
-    </div>
-    <div id="opps-near-me" class="tabcontent hp">
+    <div id="opps-near-me">
       <% if @opportunities.size > 0 %>
         <% @opportunities.each do |opportunity| %>
           <%= render 'opportunity_row', opportunity: opportunity %>
         <% end %>
       <% else %>
         <div class="no-open-opportunities">
-          It looks like there aren't any cleanups available in your neighborhood! Maybe you could create one?
-        </div>
-      <% end %>
-    </div>
-    <div id="my-opps" class="tabcontent hp">
-      <% if @my_opportunities.size > 0 %>
-        <% @my_opportunities.each do |opportunity| %>
-          <%= render 'opportunity_row', opportunity: opportunity %>
-        <% end %>
-      <% else %>
-        <div class="no-active-opportunities">
-          Cleanups you're participating in will show up here.
+          It looks like there aren't any cleanups available in your neighborhood! You should create one!
+          <a class="new-cleanup-link" href="/opportunities/new">
+            <div class="new-cleanup-link-text">
+              Create a cleanup
+            </div>
+          </a>
         </div>
       <% end %>
     </div>
@@ -62,7 +42,6 @@
     });
 
     let oppos = <%= raw @opportunities.map.to_json {|o|}.html_safe %>;
-    let myOppos = <%= raw @my_opportunities.map.to_json {|o|}.html_safe %>;
 
 
     let greenIcon = {
@@ -107,57 +86,6 @@
         animation: google.maps.Animation.DROP,
         icon: greenIcon
       });
-
-
-      (function (marker, data) {
-        google.maps.event.addListener(marker, "click", function (e) {
-          infoWindow.setContent(data.contentString);
-          infoWindow.open(map, marker);
-          event.stopPropagation(); // this prevents propagation of marker click to map click
-        });
-      })(marker, data);
-
-      //marker.addListener('click', assignListener(marker, infoWindow));
-    }
-
-    for (let i = 0, length = myOppos.length; i < length; i++)
-    {
-      let data = myOppos[i],
-        LatLng = {lat: parseFloat(data.latitude), lng: parseFloat(data.longitude)};
-
-      let overdue = data['overdue?'];
-
-      data.contentString =
-        `<div id="marker-content">
-          <div id="siteNotice"></div>
-          <h4 id="marker-title" class="marker-title"> ${data.title}</h4>
-          <div id="marker-participants" class="marker-participants">Volunteers: ${data.volunteer_count} / ${data.volunteers_required}</div>
-          <div id="marker-followers" class="marker-followers">Followers: ${data.follower_count}</div>
-          <a href="/opportunities/${data.id}" id="marker-link" class="marker-link">See Opportunity Details</a>
-         </div>`;
-
-      let marker;
-
-      if (!overdue)
-      {
-        marker = new google.maps.Marker({
-          position: LatLng,
-          map: map,
-          animation: google.maps.Animation.DROP,
-          icon: blueIcon
-        });
-      }
-      else
-      {
-        marker = new google.maps.Marker({
-          position: LatLng,
-          map: map,
-          animation: google.maps.Animation.DROP,
-          icon: redIcon
-        });
-      }
-
-
 
 
       (function (marker, data) {
