--- a/app/views/opportunities/edit.html.erb
+++ b/app/views/opportunities/edit.html.erb
@@ -1,5 +1,3 @@
-<div class="jbh-standard-title">Editing Opportunity</div>
-<%= render 'editform', opportunity: @opportunity %>
-<div class="oppo-edit-back-btn">
-  <%= link_to 'Back', @opportunity %>
+<div class="edit-cleanup-page">
+  <%= render 'editform', opportunity: @opportunity %>
 </div>
