--- a/app/views/simple_calendar/_week_calendar.html.erb
+++ b/app/views/simple_calendar/_week_calendar.html.erb
@@ -36,7 +36,7 @@
   </table>
     <div class="calendar-footer">
       <div class="calendar-footer-note">
-        Click on a specific day to see a map view of that day's cleanups.
+        Click on the date header to see that day's cleanups on a map!
       </div>
     </div>
 </div>
