fix volunteers#show background

--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -921,6 +921,7 @@
 
 .followers-show-page {
   height: 100% !important;
+  background-color: white;
 
   .followers-body {
     display: flex !important;
