--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -104,6 +104,7 @@ h1 {
   margin-bottom: 3vh;
   padding-top: 2vh;
   color: $darkgrey;
+  font-family: 'TwinMarker';
   //border-bottom: 2px solid $lightgrey;
   @include respond-to(handhelds) {
     font-size: 2em;
