--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,18 @@
 <div class="registration-page">
+  <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), class: 'new-generic-form') do |f| %>
+    <%= f.text_field :username %>
+    <%= f.email_field :email %>
+    <%= f.text_field :first_name %>
+    <%= f.text_field :last_name %>
+  <% end %>
+</div>
+
+
+
+
+
+
+<div class="registration-page">
   <div class="jbh-standard-title">Welcome!</div>
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= f.error_notification %>
@@ -11,9 +25,6 @@
                   required: true,
                   placeholder: "What's your email?",
                   input_html: { autocomplete: "email" }%>
-      <%= f.input :phone_number,
-                  placeholder: "What's your phone number?",
-                  required: true %>
       <%= f.input :first_name,
                   placeholder: 'Enter your first name',
                   required: true %>
