--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,13 @@
     <%= f.email_field :email %>
     <%= f.text_field :first_name %>
     <%= f.text_field :last_name %>
+    <%= f.date_select :birth_date %>
+    <%= f.text_field :city %>
+    <%= f.text_field :region %>
+    <%= f.text_field :postal_code %>
+    <%= f.text_field :country %>
+    <%= f.password_field :password %>
+    <%= f.password_field :passowrd_confirmation %>
   <% end %>
 </div>
 
