--- a/app/views/simple_calendar/_week_calendar.html.erb
+++ b/app/views/simple_calendar/_week_calendar.html.erb
@@ -25,7 +25,7 @@
       <% date_range.each_slice(7) do |week| %>
         <tr>
           <% week.each do |day| %>
-            <%= content_tag :td, class: "day is-current-day-#{day.to_date == Date.today}" do %>
+            <%= content_tag :td, class: "day is-current-day-#{day.to_date == Date.current}" do %>
               <% block.call day, sorted_events.fetch(day, []) %>
             <% end %>
           <% end %>
