--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,74 +1,34 @@
 <div class="registration-page">
-  <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), class: 'new-generic-form') do |f| %>
-    <%= f.text_field :username %>
-    <%= f.email_field :email %>
-    <%= f.text_field :first_name %>
-    <%= f.text_field :last_name %>
-    <%= f.date_select :birth_date %>
-    <%= f.text_field :city %>
-    <%= f.text_field :region %>
-    <%= f.text_field :postal_code %>
-    <%= f.text_field :country %>
-    <%= f.password_field :password %>
-    <%= f.password_field :passowrd_confirmation %>
-  <% end %>
-</div>
-
-
-
-
-
-
-<div class="registration-page">
-  <div class="jbh-standard-title">Welcome!</div>
-  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= f.error_notification %>
-    <div class="form-inputs">
-      <%= f.input :username,
-                  required: true,
-                  placeholder: 'What would you like to go by?',
-                  autofocus: true %>
-      <%= f.input :email,
-                  required: true,
-                  placeholder: "What's your email?",
-                  input_html: { autocomplete: "email" }%>
-      <%= f.input :first_name,
-                  placeholder: 'Enter your first name',
-                  required: true %>
-      <%= f.input :last_name,
-                  placeholder: 'Enter your last name',
-                  required: true %>
-      <%= f.input :birth_date,
-                  order: [:month, :day, :year],
-                  start_year: Date.today.year - 110,
-                  end_year: Date.today.year - 10,
-                  required: true %>
-      <%= f.label 'Time Zone:' %>
-      <%= f.time_zone_select(:time_zone, ActiveSupport::TimeZone.us_zones, default: 'Mountain Time (US & Canada)') %>
-      <%= f.input :city,
-                  placeholder: 'What city do you live in?',
-                  required: true %>
-      <%= f.input :region,
-                  placeholder: 'What state/region is that?',
-                  required: true %>
-      <%= f.input :postal_code,
-                  placeholder: 'Enter your postal code',
-                  required: true %>
-      <%= f.input :country,
-                  selected: 'US',
-                  required: true %>
-      <%= f.input :password,
-                  placeholder: 'Pick a password (the more secure the better)!',
-                  required: true,
-                  hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                  input_html: { autocomplete: "new-password" } %>
-      <%= f.input :password_confirmation,
-                  placeholder: 'Confirm your password',
-                  required: true,
-                  input_html: { autocomplete: "new-password" } %>
+  <div class="form-buffer"></div>
+  <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <div class="form-standard-submit-wrapper">
+      <%= f.submit 'Register', class: 'form-standard-submit' %>
     </div>
-    <div class="submit-registration-container">
-      <%= f.button :submit, "REGISTER", class: "submit-registration-button" %>
+    <div class="form-standard-body">
+      <%= f.text_field :username, placeholder: 'Username' %>
+      <%= f.email_field :email, placeholder: 'Email Address', class: 'form-standard-emailfield' %>
+      <%= f.text_field :first_name, placeholder: 'First Name', class: 'form-standard-textfield' %>
+      <%= f.text_field :last_name, placeholder: 'Last Name', class: 'form-standard-textfield' %>
+      <div class="birth-date-group">
+        <div class="birth-date-label">Birthday</div>
+        <%= f.date_select :birth_date, start_year: 1930, end_year: Date.today.year - 10, selected: Date.today.year - 18, class: 'form-standard-dateselect'  %>
+        <div class="birth-date-explanation">
+          This information is not publicly visible and is only used for internal purposes.
+        </div>
+      </div>
+      <%= f.text_field :city, placeholder: 'City', class: 'form-standard-textfield' %>
+      <%= f.text_field :region, placeholder: 'State', class: 'form-standard-textfield' %>
+      <%= f.text_field :postal_code, placeholder: 'Postal code', class: 'form-standard-textfield' %>
+      <div class="form-group">
+        <div class="country-buffer"></div>
+        <%= f.country_select :country, selected: 'US', class: 'form-standard-countryselect' %>
+      </div>
+      <%= f.password_field :password, placeholder: 'Password', class: 'form-standard-password' %>
+      <%= f.password_field :password_confirmation, placeholder: 'Password Confirmation' %>
+      <div class="form-standard-submit-wrapper">
+        <%= f.submit 'Register', class: 'form-standard-submit' %>
+      </div>
+      <div class="overflow-button"></div>
     </div>
   <% end %>
 </div>
