--- a/app/views/requirements/show.html.erb
+++ b/app/views/requirements/show.html.erb
@@ -18,7 +18,7 @@
               <div class="opportunity-info-row-data black"><%= @requirement.category_title %></div>
             </div>
             <div class="opportunity-info-row"><%= @requirement.defined ? 'COMPLETION DATE' : 'PLAN BY DATE' %>
-              <div class="opportunity-info-row-data">  <%= @requirement.target_completion_date %></div>
+              <div class="opportunity-info-row-data">  <%= @requirement.cleanup_date %></div>
             </div>
           </div>
           <div class="opportunity-info-right opportunity-info-container">
