--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -45,4 +45,48 @@
       </div>
     </div>
   <% end %>
+
+  <div class="calendar-aboutus">
+    <div class="aboutus-left">
+      <div class="aboutus-div-title">
+        About us
+      </div>
+      <div class="aboutus-content">
+        Detrashers.org is a donation-funded platform built around making it easy to organize and find trash cleanups in your community.
+      </div>
+    </div>
+
+    <div class="aboutus-center">
+      <div class="aboutus-div-title">
+        How to help
+      </div>
+      <div class="aboutus-content">
+        There are many ways you can help: organizing, participating, donating, and spreading the word!
+        <div class="help-out-links">
+          <a class="help-out-link" href="/donate">Donation Info</a><a class="help-out-link" href="/social">Social Media</a>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="aboutus-right">
+      <div class="aboutus-div-title">
+        Our Impact
+      </div>
+      <div class="aboutus-content">
+        Every pound of trash collected by detrashers and properly disposed of means one less pound of trash in our streets, waterways, and oceans!
+      </div>
+    </div>
+
+    <div class="aboutus-mobile">
+      <div class="aboutus-content">
+        Detrashers.org is a donation-funded platform built around make it easy to organize and participate in trash cleanups in your community.
+        <br>
+        -
+        <br>
+        Enter your postal code to see a calendar with cleanup opportunities in your area!
+      </div>
+    </div>
+
+  </div>
 </div>
